--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Taskly – Smart Help, Human Hands</title>
+  <style>
+    body { font-family: sans-serif; background: #f4f4f4; text-align: center; padding: 50px; }
+    h1 { color: #2c3e50; }
+    p { font-size: 1.2rem; color: #555; }
+    a { background: #3498db; color: #fff; padding: 10px 20px; text-decoration: none; border-radius: 5px; display: inline-block; margin-top: 20px; }
+  </style>
+</head>
+<body>
+  <h1>Taskly – Smart Help, Human Hands</h1>
+  <p>Your AI-powered agent for real-world tasks.</p>
+  <a href="#">Get Started</a>
+</body>
+</html>
